add login activity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">UTIS</string>
+    <string name="login_login">Фамилия</string>
+    <string name="login_password">Пароль</string>
 </resources>
