--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,19 @@
 <resources>
-    <string name="app_name">UTIS</string>
-    <string name="login_login">Фамилия</string>
-    <string name="login_password">Пароль</string>
+    <string name="app_name" translatable="false">UTIS</string>
+    <string name="login_login" translatable="false">Фамилия</string>
+    <string name="login_password" translatable="false">Пароль</string>
+    <string name="title_activity_utis">UTIS</string>
+    <string name="navigation_drawer_open">Open navigation drawer</string>
+    <string name="navigation_drawer_close">Close navigation drawer</string>
+    <string name="nav_header_title">UTIS</string>
+    <string name="nav_header_subtitle">Мобильный клиент для ЕТИС ПГУ</string>
+    <string name="nav_header_desc">Navigation header</string>
+    <string name="action_settings">Settings</string>
+
+    <string name="menu_timetable">Расписание</string>
+    <string name="menu_score">Оценки</string>
+    <string name="menu_slideshow">Slideshow</string>
+    <string name="menu_tools">Tools</string>
+    <string name="menu_share">Настройки</string>
+    <string name="menu_send">Выйти</string>
 </resources>
